# live-ai-brain

./: .gitignore  README.md  pyproject.toml
docs/: ai_brain_c_lite_design.html  ai_brain_c_lite_modules.html  ai_brain_output_design.html  ai_brain_overview.html  ai_brain_phase1_approaches.html  ai_brain_roles_workflow.html  ai_brain_upload_design.html  project_requirements.md.txt
docs/superpowers/plans/: 2026-06-01-live-commerce-ai-brain-c-lite.md
docs/superpowers/specs/: 2026-06-01-live-commerce-ai-brain-c-lite-design.md
products/: 运营总监提示词.txt
products/窦神文言文速通/: 00-资料来源.md  01-产品总览.txt  02-目标用户.md  03-用户痛点.md  04-核心卖点.txt  05-课程内容.md  06-直播话术.md  10-短视频脚本参考.md  11-课程权益与交付流程.txt  13-成交转化话术.md  常见问题FAQ.md  飞书链接.txt
products/窦神文言文速通/docs/: 产品介绍.docx  产品卖点.txt  直播话术1.txt  直播话术2.txt
src/live_ai_brain/: __init__.py  app.py  compliance.py  content.py  ingest.py  knowledge.py  models.py  replay.py  storage.py
tests/: test_app.py  test_compliance.py  test_content.py  test_end_to_end.py  test_ingest.py  test_knowledge.py  test_replay.py  test_scaffold.py  test_storage.py  test_streamlit_config.py
tests/fixtures/: live_metrics.csv  qianchuan_metrics.csv
